[tool.poetry]
name = "applied-ml"
version = "0.1.0"
description = ""
authors = ["MusaKhan16 <mmusa.akhan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6, <3.10"
tensorflow = "^2.7.0"
pandas = "^1.3.5"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

